<resources>
    <string name="app_name" translatable="false">pUber</string>
    <string name="title_activity_maps" translatable="false">pUber</string>
    <string name="Write_review">Write Review</string>
    <string name="See_more">See More</string>
    <string name="Request_usage">Request Usage</string>
    <string name="Address">Address:</string>
    <string name="Price">Price:</string>
    <string name="Info">Info:</string>
    <string name="Report">Report</string>

    <string name="writeYourReview">Write your review</string>
    <string name="cancel">Cancel</string>
    <string name="Submit">Submit</string>
    <string name="Back">Back</string>

    <string name="basicDescription">This is a toilet.</string>
    <string name="nearest_toilet">Nearest Toilet</string>
    <string name="profile">Profile</string>
    <string name="description">Description:</string>
    <string name="saveValues">Save Values</string>
    <string name="yourToilet">My Toilet</string>
    <string name="addToilet">Add Toilet</string>
    <string name="addDescription">Add a description to your toilet.</string>
    <string name="addAddress">Write your address here.</string>
    <string name="fillOutInformation">Please describe your toilet and add an address.</string>
    <string name="yourLocation">This is you!</string>
    <string name="notEnoughPermissions">Not enough permissions!</string>
    <string name="default_notification_channel_id" translatable="false">1</string>
    <string name="gps_not_found_title">No GPS.</string>
    <string name="gps_not_found_message">Want to enable GPS?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="requestToilet">Someone wants to use your toilet!</string>
    <string name="requestSentTo">Request sent to:</string>
    <string name="hasRequestedAccessToYourToilet">has requested access to your toilet.</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="request">Request</string>
    <string name="notRequested">Not requested yet.</string>
    <string name="awaitingAcceptance">Waiting for acceptance.</string>
    <string name="toiletReported">Toilet has been reported. Thanks for your help!</string>
    <string name="requestedToSeeYourInformation">has requested to see your informaton. Will you accept him/her?</string>
</resources>
