<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tw_review_toiletName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="bobs toilet"
        android:textAlignment="center"
        android:textSize="30sp" />


    <EditText
        android:id="@+id/et_review_review"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/writeYourReview"
        android:inputType="text"
        android:lineSpacingExtra="8sp"
        android:singleLine="false" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">


        <Button
            android:id="@+id/button_review_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_weight="2"
            android:text="@string/cancel"
            android:textAlignment="center"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/button_review_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_weight="2"
            android:text="@string/Submit"
            android:textAlignment="center"
            android:textAllCaps="false" />
    </LinearLayout>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ReviewFragment">


    </FrameLayout>
</LinearLayout>

